fix: restore assets folder

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
   <!-- HEADER -->
   <header>
-    <h2>PlugOUT</h2>
+    <h2>PlugedOUT</h2>
     <div class="menu">
       <span>Team</span>
       <span>Module</span>
